# alea

./: Cargo.toml  README.md  fizzbuzz.alea  fizzbuzz.txt  hello_from_mira.alea  hello_from_mira.txt
alea-core/: Cargo.toml
alea-core/src/: decode.rs  encode.rs  isa.rs  lib.rs  memory.rs  vcore.rs
src/: console.rs  hello.alea  main.rs
