[workspace]
members = [
    "alea-core"
]

[package]
name = "alea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alea-core = { path = "alea-core" }
bytes = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
